--- a/openapi/paths/users/{id_or_username}.yaml
+++ b/openapi/paths/users/{id_or_username}.yaml
@@ -1,14 +1,40 @@
-put:
-  summary: Update user status
-  description: Returns the updated user.
-  operationId: updateUserStatus
+get:
+  summary: Get a user
+  description: Returns a single user.
+  operationId: getUser
   security:
     - cookieAuth: []
     - bearerAuth: []
   tags:
     - users
   parameters:
-    - name: id
+    - name: id_or_username
+      in: path
+      required: true
+      schema:
+        type: string
+  responses:
+    '200':
+      description: Successfully returned a user
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/schemas/users/User.yaml'
+    '401':
+      $ref: '../../components/responses/Unauthorized.yaml'
+    '410':
+      $ref: '../../components/responses/Gone.yaml'
+patch:
+  summary: Update user
+  description: Returns the updated user.
+  operationId: updateUser
+  security:
+    - cookieAuth: []
+    - bearerAuth: []
+  tags:
+    - users
+  parameters:
+    - name: id_or_username
       in: path
       required: true
       schema:
@@ -18,7 +44,7 @@ put:
     content:
       application/json:
         schema:
-          $ref: '../../components/schemas/users/Status.yaml'
+          $ref: '../../components/schemas/users/Update.yaml'
   responses:
     '200':
       description: Successfully returned user modifications
@@ -30,8 +56,6 @@ put:
       $ref: '../../components/responses/Unauthorized.yaml'
     '403':
       $ref: '../../components/responses/Forbidden.yaml'
-    '409':
-      $ref: '../../components/responses/Conflict.yaml'
     '410':
       $ref: '../../components/responses/Gone.yaml'
     '422':
