--- a/openapi/paths/tasks/{id}.yaml
+++ b/openapi/paths/tasks/{id}.yaml
@@ -24,7 +24,7 @@ get:
       $ref: '../../components/responses/Unauthorized.yaml'
     '410':
       $ref: '../../components/responses/Gone.yaml'
-put:
+patch:
   summary: Update a task
   description: Returns the updated task.
   operationId: updateTask
