--- a/openapi/components/schemas/users/me/CurrentUser.yaml
+++ b/openapi/components/schemas/users/me/CurrentUser.yaml
@@ -1,24 +1,18 @@
 type: object
 additionalProperties: false
+required:
+  - id
+  - bio
+  - created_at
+  - email
+  - name
+  - updated_at
+  - username
 properties:
   id:
     type: string
     description: Unique identifier for this object
     example: cdmt48tfcls65a7mb590
-    readOnly: true
-  username:
-    type: string
-    pattern: '^[0-9a-zA-Z._]+$'
-    description: Username of the user
-    example: test
-  email:
-    type: string
-    description: Email of the user
-    example: test@example.com
-  name:
-    type: string
-    description: Name of the user
-    example: Test
   bio:
     type: string
     description: Biography of the user
@@ -29,9 +23,22 @@ properties:
     description: User creation date time
     example: '2022-11-12T09:11:42.420Z'
     nullable: true
+  email:
+    type: string
+    description: Email of the user
+    example: test@example.com
+  name:
+    type: string
+    description: Name of the user
+    example: Test
   updated_at:
     type: string
     format: date-time
     description: User last update date time
     example: '2022-11-12T10:23:56.069Z'
     nullable: true
+  username:
+    type: string
+    pattern: '^[0-9a-zA-Z._]+$'
+    description: Username of the user
+    example: test
