--- a/openapi/components/schemas/personal_access_tokens/List.yaml
+++ b/openapi/components/schemas/personal_access_tokens/List.yaml
@@ -1,5 +1,7 @@
 type: object
 additionalProperties: false
+required:
+  - personal_access_tokens
 properties:
   personal_access_tokens:
     type: array
