--- a/openapi/components/schemas/personal_access_tokens/Token.yaml
+++ b/openapi/components/schemas/personal_access_tokens/Token.yaml
@@ -2,28 +2,16 @@ type: object
 additionalProperties: false
 required:
   - id
-  - name
-  - revoked
-  - user_id
   - created_at
   - expires_at
+  - is_revoked
+  - name
+  - user_id
 properties:
   id:
     type: string
     description: Unique identifier for this object
     example: cdndmc5fcls6kndagdgg
-    readOnly: true
-  name:
-    type: string
-    description: The name of the token
-    example: My Token
-  revoked:
-    type: boolean
-  user_id:
-    type: string
-    description: Unique identifier for this object
-    example: cdmt48tfcls65a7mb590
-    readOnly: true
   created_at:
     type: string
     format: date-time
@@ -34,3 +22,15 @@ properties:
     format: date-time
     description: Token expiration date time
     example: '2022-12-13T00:00:00.00Z'
+  is_revoked:
+    type: boolean
+    description: True if the token is revoked
+    example: false
+  name:
+    type: string
+    description: The name of the token
+    example: My Token
+  user_id:
+    type: string
+    description: Unique identifier for this object
+    example: cdmt48tfcls65a7mb590
